--- a/package.json
+++ b/package.json
@@ -33,10 +33,29 @@
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^8.0.1",
+        "lint-staged": "^13.0.2",
         "prettier": "^2.5.1",
         "sass": "^1.52.3",
         "typescript": "^4.6.3",
         "vite": "^2.9.9",
         "vite-tsconfig-paths": "^3.5.0"
+    },
+    "lint-staged": {
+        "*.{js,ts,tsx}": [
+            "npm run prettier",
+            "npm run lint"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
